--- a/Stroke_Data/stroke.ipynb
+++ b/Stroke_Data/stroke.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 6
     }
    ],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 52
+     "execution_count": 7
     }
    ],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 8
     }
    ],
    "source": [
@@ -142,62 +142,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "         id  gender   age  hypertension  heart_disease ever_married  \\\n",
-       "0      9046    Male  67.0             0              1          Yes   \n",
-       "2     31112    Male  80.0             0              1          Yes   \n",
-       "3     60182  Female  49.0             0              0          Yes   \n",
-       "4      1665  Female  79.0             1              0          Yes   \n",
-       "5     56669    Male  81.0             0              0          Yes   \n",
-       "...     ...     ...   ...           ...            ...          ...   \n",
-       "5104  14180  Female  13.0             0              0           No   \n",
-       "5106  44873  Female  81.0             0              0          Yes   \n",
-       "5107  19723  Female  35.0             0              0          Yes   \n",
-       "5108  37544    Male  51.0             0              0          Yes   \n",
-       "5109  44679  Female  44.0             0              0          Yes   \n",
+       "          id  gender   age  hypertension  heart_disease  ever_married  \\\n",
+       "stroke                                                                  \n",
+       "0       4700    4700  4700          4700           4700          4700   \n",
+       "1        209     209   209           209            209           209   \n",
        "\n",
-       "          work_type Residence_type  avg_glucose_level   bmi   smoking_status  \\\n",
-       "0           Private          Urban             228.69  36.6  formerly smoked   \n",
-       "2           Private          Rural             105.92  32.5     never smoked   \n",
-       "3           Private          Urban             171.23  34.4           smokes   \n",
-       "4     Self-employed          Rural             174.12  24.0     never smoked   \n",
-       "5           Private          Urban             186.21  29.0  formerly smoked   \n",
-       "...             ...            ...                ...   ...              ...   \n",
-       "5104       children          Rural             103.08  18.6          Unknown   \n",
-       "5106  Self-employed          Urban             125.20  40.0     never smoked   \n",
-       "5107  Self-employed          Rural              82.99  30.6     never smoked   \n",
-       "5108        Private          Rural             166.29  25.6  formerly smoked   \n",
-       "5109       Govt_job          Urban              85.28  26.2          Unknown   \n",
-       "\n",
-       "      stroke  \n",
-       "0          1  \n",
-       "2          1  \n",
-       "3          1  \n",
-       "4          1  \n",
-       "5          1  \n",
-       "...      ...  \n",
-       "5104       0  \n",
-       "5106       0  \n",
-       "5107       0  \n",
-       "5108       0  \n",
-       "5109       0  \n",
-       "\n",
-       "[4909 rows x 12 columns]"
+       "        work_type  Residence_type  avg_glucose_level   bmi  smoking_status  \n",
+       "stroke                                                                      \n",
+       "0            4700            4700               4700  4700            4700  \n",
+       "1             209             209                209   209             209  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>gender</th>\n      <th>age</th>\n      <th>hypertension</th>\n      <th>heart_disease</th>\n      <th>ever_married</th>\n      <th>work_type</th>\n      <th>Residence_type</th>\n      <th>avg_glucose_level</th>\n      <th>bmi</th>\n      <th>smoking_status</th>\n      <th>stroke</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>9046</td>\n      <td>Male</td>\n      <td>67.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>Yes</td>\n      <td>Private</td>\n      <td>Urban</td>\n      <td>228.69</td>\n      <td>36.6</td>\n      <td>formerly smoked</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>31112</td>\n      <td>Male</td>\n      <td>80.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>Yes</td>\n      <td>Private</td>\n      <td>Rural</td>\n      <td>105.92</td>\n      <td>32.5</td>\n      <td>never smoked</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>60182</td>\n      <td>Female</td>\n      <td>49.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Private</td>\n      <td>Urban</td>\n      <td>171.23</td>\n      <td>34.4</td>\n      <td>smokes</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1665</td>\n      <td>Female</td>\n      <td>79.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Self-employed</td>\n      <td>Rural</td>\n      <td>174.12</td>\n      <td>24.0</td>\n      <td>never smoked</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>56669</td>\n      <td>Male</td>\n      <td>81.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Private</td>\n      <td>Urban</td>\n      <td>186.21</td>\n      <td>29.0</td>\n      <td>formerly smoked</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5104</th>\n      <td>14180</td>\n      <td>Female</td>\n      <td>13.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>No</td>\n      <td>children</td>\n      <td>Rural</td>\n      <td>103.08</td>\n      <td>18.6</td>\n      <td>Unknown</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5106</th>\n      <td>44873</td>\n      <td>Female</td>\n      <td>81.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Self-employed</td>\n      <td>Urban</td>\n      <td>125.20</td>\n      <td>40.0</td>\n      <td>never smoked</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5107</th>\n      <td>19723</td>\n      <td>Female</td>\n      <td>35.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Self-employed</td>\n      <td>Rural</td>\n      <td>82.99</td>\n      <td>30.6</td>\n      <td>never smoked</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5108</th>\n      <td>37544</td>\n      <td>Male</td>\n      <td>51.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Private</td>\n      <td>Rural</td>\n      <td>166.29</td>\n      <td>25.6</td>\n      <td>formerly smoked</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5109</th>\n      <td>44679</td>\n      <td>Female</td>\n      <td>44.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Yes</td>\n      <td>Govt_job</td>\n      <td>Urban</td>\n      <td>85.28</td>\n      <td>26.2</td>\n      <td>Unknown</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>4909 rows × 12 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>gender</th>\n      <th>age</th>\n      <th>hypertension</th>\n      <th>heart_disease</th>\n      <th>ever_married</th>\n      <th>work_type</th>\n      <th>Residence_type</th>\n      <th>avg_glucose_level</th>\n      <th>bmi</th>\n      <th>smoking_status</th>\n    </tr>\n    <tr>\n      <th>stroke</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n      <td>4700</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n      <td>209</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 29
     }
    ],
    "source": [
-    "stroke"
+    "stroke.groupby('stroke').count()"
    ]
   },
   {
